--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test</title>
+  <title>Blog Post</title>
+  <link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-grey.css">
 </head>
 <body>
-  <h1>This is a test!</h1>
-</body>
+  <header>
+    <h1>My Blog</h1>
+  </header>
+  <section>
+    <header>
+      <h2>I built a webpage</h2>
+      <h3>July 21, 2015</h3>
+      <h4>By: Joshua Furmanczyk</h4>
+    </header>
+    <article>
+      <p>I'm excited to be learning superior coding skills by Lighthouse Labs.</p>
+      <p>Once completing this program I will build a boss website for Brayton Plumbing.</p>
+    </article>
+  </section>
+
+  <aside>
+    <section>
+      <h4>Widget</h4>
+    </section>
+
+    <section>
+      <h4>Widget</h4>
+    </section>
+  </aside>
+  </body>
+  
+
 </html>
