--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <header>
-    <h1>My Blog</h1>
+    <h1>The Fuzzymack</h1>
+    <img src="https://s-media-cache-ak0.pinimg.com/originals/cf/81/75/cf8175db74ef929edbaec5618c8e9317.jpg">
   </header>
   <section>
     <header>
