--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 </head>
 <body>
   <header>
-    <h1>The Fuzzymack</h1>
-    <img src="https://s-media-cache-ak0.pinimg.com/originals/cf/81/75/cf8175db74ef929edbaec5618c8e9317.jpg">
+    <h1>Josh Furmanczyk's Blog</h1>
+    <img src="http://seeklogo.com/images/R/red-bull-racing-f1-team-logo-7D741F35FF-seeklogo.com.gif">
   </header>
   <section>
     <header>
       <h2>I built a webpage</h2>
       <h3>July 21, 2015</h3>
-      <h4>By: Joshua Furmanczyk</h4>
+      <h4>
+      By: <span style="color: #0E1DD1;">Joshua Furmanczyk</span>
+      </h4>
+      <img src="http://placekitten.com/200/150">
     </header>
     <article>
-      <p>I'm excited to be learning superior coding skills by Lighthouse Labs.</p>
-      <p>Once completing this program I will build a boss website for Brayton Plumbing.</p>
+      <p>I'm excited to be learning <em>superior coding skills</em> by <strong>Lighthouse Labs</strong>.</p>
+      <p>Once completing this program I will <em>build</em> a <strong>boss website</strong> for <span style="color: #0E1DD1";>Brayton Plumbing</span>.</p>
     </article>
   </section>
 
@@ -33,5 +36,4 @@
   </aside>
   </body>
   
-
 </html>
