updated blog title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header class="title">
-    <h1>Josh Furmanczyk's Blog</h1>
+    <h1>Josh Furmanczyk's Motorcycle Blog</h1>
   </header>
   <section>
     <header class="imgcon">
